[project]
name = "routstr"
version = "0.0.1"
description = "Payment proxy for your LLM endpoint using cashu and nostr."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.20",
    "cashu>=0.16",
    "fastapi[standard]>=0.115",
    "sqlmodel>=0.0.24",
    "marshmallow<4.0",
    "httpx[socks]>=0.25.2",
]

[dependency-groups]
dev = ["mypy>=1.15.0", "ruff>=0.11.6", "openai>=1.76.0", "pytest>=8.0.0", "pytest-asyncio>=0.24.0", "httpx>=0.25.2"]
